--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Build OpenWrt-Linksys EA8500
+name: Build OpenWrt-Linksys EA8500-v2
 
 on:
   release:
